# cargo_drone

./: .gitignore  CMakeLists.txt  README.md
cargo_drone/: README.md  package.xml
cargo_drone/cfg/: drone_param.cfg
cargo_drone/launch/: mission1.launch  mission1_sim.launch
cargo_drone/src/: controller.cpp
cargo_drone/srv/: cmd.srv
cfg/: drone_param.cfg
config/: drone_param.yaml
launch/: apm.launch  aruco_tracker.launch  aruco_tracker_sim.launch  camera.launch  mission1.launch  mission1_sim.launch
simple_video_recorder/: CMakeLists.txt  README.md  package.xml
simple_video_recorder/src/: simple_video_recorder.cpp
simple_video_recorder/srv/: record_trigger.srv
src/: controller.cpp
src/drone/: CMakeLists.txt  package.xml
src/drone/launch/: apm.launch  aruco_tracker.launch  aruco_tracker_sim.launch  camera.launch  mission1.launch  mission1_sim.launch
src/drone/src/: controller.cpp
